@@ -76,7 +76,15 @@ bool Path::hasCurrentPoint() const
 
 FloatPoint Path::currentPoint() const 
 {
-    // FIXME: return current point of subpath.
+    if (m_path->countPoints() > 0) {
+        SkPoint skResult;
+        m_path->getLastPt(&skResult);
+        FloatPoint result;
+        result.setX(SkScalarToFloat(skResult.fX));
+        result.setY(SkScalarToFloat(skResult.fY));
+        return result;
+    }
+
     float quietNaN = std::numeric_limits<float>::quiet_NaN();
     return FloatPoint(quietNaN, quietNaN);
 }
